nav link sizing on mobile fix

--- a/css/alex-2021.webflow.css
+++ b/css/alex-2021.webflow.css
@@ -1083,8 +1083,6 @@ h1 {
     margin-left: 0px;
     float: right;
     clear: right;
-    font-size: 22px;
-    line-height: 28px;
     text-align: left;
   }
 
